Bug 466059 - Confusing information shown in titlebar
Summary: Confusing information shown in titlebar
Status: RESOLVED FIXED
Alias: None
Product: policykit-kde-agent-1
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-02-19 08:15 UTC by Craig Drummond
Modified: 2023-03-21 11:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Craig Drummond 2023-02-19 08:15:07 UTC
SUMMARY
When the authentication required diaog is shown, the window titlebar contains "- PolicyKit1 KDE Agent" - most non-techy users would have no idea what this means. Perhaps it would be better if this part of the title bar was just not shown?


STEPS TO REPRODUCE
1. Use system settings to create new user
2. Press "Create" button
3. Authentication dialog is shown

OBSERVED RESULT
As stated "Authentication Required - PolicyKit1 KDE Agent" shown in titlebar.

EXPECTED RESULT
Just "Authentication Required" shown in titlebar.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.10
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.6
Kernel Version: 5.19.0-31-generic (64-bit)

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2023-02-24 12:40:31 UTC
From a technical POV this is a bit tricky, the "application" name is set by Qt internally. See https://bugreports.qt.io/browse/QTBUG-111497
Comment 2 Nate Graham 2023-02-28 18:23:18 UTC
Per the resolution to that bug report, Qt devs say we can do this ourselves by clearing the display name.
Comment 3 Bug Janitor Service 2023-03-12 13:38:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/polkit-kde-agent-1/-/merge_requests/20
Comment 4 Nicolas Fella 2023-03-21 11:55:11 UTC
Git commit afe55e1e2dc11844fd0a4113121a380d17e02599 by Nicolas Fella.
Committed on 12/03/2023 at 13:37.
Pushed by nicolasfella into branch 'master'.

Unset QApplication::applicationDisplayName()

Otherwise auth windows get '- PolicyKit1 KDE Agent' added to their window title, which should be avoided because it's an implementation detail meaningless to the user

M  +1    -1    main.cpp

https://invent.kde.org/plasma/polkit-kde-agent-1/commit/afe55e1e2dc11844fd0a4113121a380d17e02599