Unset QApplication::applicationDisplayName()

Otherwise auth windows get '- PolicyKit1 KDE Agent' added to their window title, which should be avoided because it's an implementation detail meaningless to the user

BUG: 466059